SalaryScaleBLL: 	Added method public static void InsertRecord(SalaryScale record) 	Set [Serializable] attribute on classes DomainObject.cs, SalaryGradeQuartiles.cs and Title.cs in order to be able to save Title object to ViewState.
Esra.Web:
	Esra.css: Added Ajax calendar styles
	Default.aspx: Converted to use Esra.master.  Added some title labels and table formatting.
	SalaryReviewAnalysis.aspx: Added some title labels and table formatting.
	SalaryGradeQuartiles_UserInputForm.aspx: Added some Ajax calendar extenders to date fields.
	Test.aspx: Added some style sheet elements and Ajax calendar extenders to date fields.
	TitleCode_UserInputForm.aspx: Added new text fields to vInsertNewTitleCodeAverages view to allow data input. 
	TitleCode_UserInputForm.aspx.cs: Revised method protected void gvSalaryScale_SelectedIndexChanged(object sender, EventArgs e) to populate vInsertNewTitleCodeAverages Title fields.  Added method protected void btnClick_Command(object sender, CommandEventArgs to handle vInsertNewTitleCodeAverages buttoin click events for inserting new SalaryScale Averages. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1759. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5153

--- a/Esra.Web/includes/Esra.css
+++ b/Esra.Web/includes/Esra.css
@@ -93,4 +93,24 @@ p.bbox em {
 	padding: 0 39px 39px 0;
 }
 
+/* ajax calendar */
+.calendar .ajax__calendar_body
+{
+	background: white;
+	width: 252px;
+    height: 189px;
+}
+.calendar .ajax__calendar_container
+{	
+	background: white;
+	border: 2px black solid;
+	width: 262px;
+}
+.calendar .ajax__calendar_month
+{
+	padding: 0px;
+	height: 25px;
+	width: 30px;
+}
+
 
