IDaoFactory.cs: 	ISalaryScaleDao: 		Added methods bool Exists(SalaryScale record); bool HasSalaryGradeQuartiles(SalaryScale record); and SalaryGradeQuartiles GetSalaryGradeQuartiles
(SalaryScale record);
SalaryGradeQuartiles.hbm.xml:
	Modified SalaryGrade and EffectiveDate properties to read only.  Changed unsaved-value to any; changed SalaryScales cascade=none.
SalaryScale.cs: Added some enterprise library validation.
SalaryScale.hbm.xml: Added both TitleCode and EffectiveDate read-only properties.  

NHibernateDaoFactory:
	Added implementation for methods public bool Exists(SalaryScale record); public bool HasSalaryGradeQuartiles(SalaryScale record); and public SalaryGradeQuartiles 

GetSalaryGradeQuartiles(SalaryScale record).

Esra.css: Added styles for buttons.

TitleCode_UserInputForm.aspx: Added validators, and buttons, plus revised various settings to get insert/update and delete function operating properly.

TitleCode_UserInputForm.aspx.cs: Added an number of methods to set and reset master message label field.  Added logic to check if a record already exists before adding it. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1761. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5155

--- a/Esra.Web/includes/Esra.css
+++ b/Esra.Web/includes/Esra.css
@@ -113,4 +113,39 @@ p.bbox em {
 	width: 30px;
 }
 
+/* Buttons */
+.buttons .cancel_button
+{
+	border: 0;
+	height: 25px;
+	width: 25px;
+}
+.buttons .update_button
+{
+	border: 0;
+	height: 25px;
+	width: 25px;
+}
+.buttons .edit_button
+{
+	border: 0;
+	height: 15px;
+	width: 15px;
+}
+.buttons .new_button
+{
+	border: 0;
+	height: 20px;
+	width: 20px;
+}
+.buttons .save_button
+{
+	border: 0;
+	height: 25px;
+	width: 25px;
+}
+.buttons .delete_button
+{
+	border: 0;
+}
 
