Added logic and image for modal popup progress indicator. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1843. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5217

--- a/Esra.Web/includes/Esra.css
+++ b/Esra.Web/includes/Esra.css
@@ -158,3 +158,20 @@ p.bbox em {
 	width: 575px;
 }
 
+.modalBackground
+{
+     background-color: Gray;
+     filter: alpha(opacity=50);
+     opacity: 0.50;
+}
+
+.updateProgress
+{
+	border-width: 1px;
+	border-style: solid;
+	background-color: #FFFFFF;
+	position: absolute;
+	width: 180px;
+	height: 65px;
+} 
+
