--- a/Esra.Web/includes/Esra.css
+++ b/Esra.Web/includes/Esra.css
@@ -114,6 +114,10 @@ p.bbox em {
 }
 
 /* Buttons */
+.buttons
+{
+	border: 0;
+}
 .buttons .cancel_button
 {
 	border: 0;
@@ -126,6 +130,14 @@ p.bbox em {
 	height: 25px;
 	width: 25px;
 }
+
+.buttons .update_button2
+{
+	border: 0;
+	height: 15px;
+	width: 15px;
+}
+
 .buttons .edit_button
 {
 	border: 0;
