--- a/Esra.Web/Esra.Master
+++ b/Esra.Web/Esra.Master
@@ -25,8 +25,8 @@
                     <asp:Label ID="lblTitle" runat="server" Text="Employee Salary Review Analysis (ESRA)" Font-Bold="true" Font-Size="Larger"></asp:Label></p></center>
                     <asp:Label ID="lbl_Message" runat="server" Text="Unable to delete record: Child records exist." Visible="False" Font-Bold="False"
                         Font-Size="Small" ForeColor="Red"></asp:Label>&nbsp;&nbsp;
-                        <ajax:AnimationExtender ID="AutomationExtender1" runat="server" TargetControlID="lbl_Message">
-                            <Animations>
+                    <ajax:AnimationExtender ID="AutomationExtender1" runat="server" TargetControlID="lbl_Message">
+                        <Animations>
                                 <OnLoad>
                                     <Sequence>
                                         <Color Duration="2"
@@ -54,7 +54,9 @@
     <hr style="clear: left;" />
     <div id="footer">
         <div id="nav_bottom">
-            <p>
+            <p><asp:ImageButton ID="imgBtn" runat="server" 
+                            ImageUrl="~/images/common/home_icon-full.jpg"  
+                            Height="22px" Width="22px" BackColor="Transparent" PostBackUrl="Default.aspx"></asp:ImageButton>&nbsp;
                 Ken Taylor --
                 <asp:Label ID="lbl_Version" runat="server"></asp:Label>
                 -- Revision 0 | <a href="mailto:<%= WebConfigurationManager.AppSettings["AppMailTo"] %>?subject=[<%=WebConfigurationManager.AppSettings["AppName"] %>] <%= System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString() %> <your question or comment>">
