--- a/Esra.Web/Esra.Master
+++ b/Esra.Web/Esra.Master
@@ -15,7 +15,7 @@
 </head>
 <body>
     <form id="form1" runat="server">
-    <asp:ScriptManager ID="ScriptManager1" runat="server">
+    <asp:ScriptManager ID="ScriptManager1" runat="server" EnablePageMethods="true" >
     </asp:ScriptManager>
     <div id="all">
         <div id="mainwrap">
