--- a/Esra.Web/includes/Esra.css
+++ b/Esra.Web/includes/Esra.css
@@ -175,12 +175,33 @@ p.bbox em {
 {
 	width: 575px;
 }
-
+/*Modal Popup*/
+.modalBackground2 {
+	background-color:#343434;
+	filter:alpha(opacity=90);
+	opacity:0.9;
+}
+.modalPopup {
+	background-color:#EFEFEF;
+	border : 1px dotted #7f7f7f;
+}
 .modalBackground
 {
      background-color: Gray;
      filter: alpha(opacity=50);
      opacity: 0.50;
+}
+.modalTitle 
+{
+	border : 1px solid #CCCCCC;
+	position : relative;
+	top : -10px;
+	left : 25px;
+	background-color : #FFF;
+	padding : 5px 10px;
+	color:#0b65c5;
+	font-size: 1.2em;
+	font-weight: bold;
 }
 
 .updateProgress
@@ -192,4 +213,10 @@ p.bbox em {
 	width: 180px;
 	height: 65px;
 } 
+
+.paddingLeft
+{
+	padding-left:10px;
+}
+
 
