Revised to work with Logout Page (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1888. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5246

--- a/Esra.Web/includes/Esra.css
+++ b/Esra.Web/includes/Esra.css
@@ -1,11 +1,13 @@
 ﻿body
 {
-	margin: 10px 0px 0px;
+	margin: 10px 0px 0px !important;
 	font-family: Arial, Verdana, Helvetica, sans-serif;
 	min-width: 1000px;
-	background: #f5f6f8;
+	background: #f5f6f8 !important;
 	text-align: left;
+	font-size: 100% !important;
 }
+#cas {font-size: 62.5% !important;}
 
 #header {
 	height: 124px;
