--- a/Esra.Web/Esra.Master
+++ b/Esra.Web/Esra.Master
@@ -21,8 +21,8 @@
         <div id="mainwrap">
             <div id="main">
                 <div class="title">
-                    <center><p>
-                    <asp:Label ID="lblTitle" runat="server" Text="Employee Salary Review Analysis (ESRA)" Font-Bold="true" Font-Size="Larger"></asp:Label></p></center>
+               <center><p class="master_p">
+                    <asp:Label ID="lblTitle" runat="server" Text="Employee Salary Review Analysis (ESRA)" Font-Bold="true" Font-Size="Larger" ></asp:Label></p></center>
                     <asp:Label ID="lbl_Message" runat="server" Text="Unable to delete record: Child records exist." Visible="False" Font-Bold="False"
                         Font-Size="Small" ForeColor="Red"></asp:Label>&nbsp;&nbsp;
                     <ajax:AnimationExtender ID="AutomationExtender1" runat="server" TargetControlID="lbl_Message">
@@ -52,7 +52,7 @@
     </div>
     <br style="clear: left;" />
     <hr style="clear: left;" />
-    <div id="footer">
+    <div id="master_footer">
         <div id="nav_bottom">
             <p><asp:ImageButton ID="imgBtn" runat="server" 
                             ImageUrl="~/images/common/home_icon-full.jpg"  
