Added font weight to hovered nav bar links. Added Updated successful message. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1997. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5317

--- a/Esra.Web/includes/Esra.css
+++ b/Esra.Web/includes/Esra.css
@@ -252,7 +252,7 @@ a:link .title
 #nav li li a:hover {padding: 0px; font-weight: bold}
 #nav li {float: left; position: relative; text-align: left; padding: 0px;}
 #nav > ul li {padding: 0px 15px;}
-#nav > ul > li:hover {background: url(../images/common/nav_bg.jpg) repeat-x left bottom;}
+#nav > ul > li:hover {background: url(../images/common/nav_bg.jpg) repeat-x left bottom; font-weight:bold;}
 #nav li ul {display: none; position: absolute; top: 100%; left: 0; font-weight: normal; padding: 4px 0px 15px;
      background: url(../images/common/navddsm_bg.png) no-repeat left bottom; margin-left: -15px; min-width: 170px;}
 #nav li ul.reports {background: url(../images/common/navdd_bg.png) no-repeat left bottom;}     
