ApplicationPage: 	Changed Page_Load method to virtual, and added logic to hide the management portion of the nav panel. 	Added generic method to find by name and hide or show named panel provided.
All other pages:
	Added override and call to base.Page_Load method from page's Page_Load method. 

MasterPage:
	Changed SalaryStep nav bar link to call page intended.

SalaryReviewAnalysisPage:
	Removed "hiding" from around College Average value, which was originally hidden from departments. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1998. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5318

--- a/Esra.Web/Esra.Master
+++ b/Esra.Web/Esra.Master
@@ -33,19 +33,23 @@
         <li>
             <center><asp:ImageButton ID="ImageButton1" runat="server" ImageUrl="~/images/common/employee_salary_comparison.png" AlternateText="ESRA the dino" PostBackUrl="~/SalaryReviewAnalysisPage.aspx" ToolTip="Salary Review Analysis"/></center>
             <br /><a href="SalaryReviewAnalysisPage.aspx">Salary Review Analysis</a></li>
+            <asp:Panel ID="pnlAdminMaintenance" runat="server" >
+            
 	    <li>
 	         <center><asp:ImageButton ID="ImageButton5" runat="server" ImageUrl="~/images/common/maintenance.png" AlternateText="Maintenance" ToolTip="Maintenance"/></center><br />
 	            <asp:HyperLink ID="HyperLink1" runat="server">Maintenance</asp:HyperLink>
 	            <ul>
 	                <li><a href="TitleCode_UserInputForm.aspx">Title Codes</a></li>
 	                <li><a href="SalaryGradeQuartiles_UserInputForm.aspx">Salary Grade Quartiles</a></li>
-	                <li><a href="NewSalarySteps_UserInputForm.aspx">Salary Steps</a></li>
+	                <li><a href="SalaryStep_UserInputForm.aspx">Salary Steps</a></li>
 	            </ul>
 	    </li>
 	    <li>
             <center><asp:ImageButton ID="ImageButton2" runat="server" ImageUrl="~/images/common/user_admin.png" AlternateText="User Administration" ToolTip="User Admin" PostBackUrl="~/UserAdminPage.aspx"/></center>
             <br /><a href="UserAdminPage.aspx">User Administration</a>
         </li>
+        
+        </asp:Panel>
         <li>
             <center><a href="mailto:<%= WebConfigurationManager.AppSettings["AppMailTo"] %>?subject=[<%=WebConfigurationManager.AppSettings["AppName"] %>] <%= System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString() %> <your question or comment>">
                 <img src="images/common/feedback.png" alt="Feedback" class="buttons"/></a></center>
